
Changelog for 1.4 Series
Released 2014-09-15

Changelog for 1.4.3
* Added sanity check for psql availability (Bug 1226, Chris T)
* Added db fix for older eca's missing currencies (Bug 1228, Chris T)
* Fixed bug 1230, pricematrix for vendors not respected (Chris T)
* Updated installation instructions with more Apache info (Bill A)

Bill A is Bill Appelbe
Chris T is Chris Travers

Changelog for 1.4.2
* Separated address classes for employees out (bug 817, Chris T)
* Fixed dojo issue with user address screen (Chris T)
* Fixed bug 1219, log message of warning trial_balance/search.css (Chris T)
* Fixed issue with demo_with_images invoice.tex item description (Chris T)
* Display vendor's sku if available on orders and invoices, bug 1218 (Chris T)
* Fixed error unable to delete order (Chris T)
* Fixed bug 1223 prices 0 if selected from parts search (Chris T)
* Fixed issue, cannot log in after creating batch. (Chris T)
* Fixed bug 1224, account dropdowns on budget screen not working (Chris T)


Chris T is Chris Travers

Changelog for 1.4.1
* Fixed bug 1205, copy does not copy roles (Chris T)
* Added multi-date inventory uploads (Erik H)
* Fixed bug 1207, date format not displated on preferences (Chris T)
* Fixed bug 1208, username does not appear on menu block (Chris T)
* Fixed bug 1209, Types of Businesses report shows total discounts (Chris T)
* Fixed bug 1210, Cannot list business reporting units (Chris T)
* Fixed bug 1211, Sequences always set to allow input (Chris T)
* Fixed bug 1213, opaque error when no tax form selected on report (Chris T)
* Fixed bug 1214, Company db name not displated on some reports (Chris T)
* Fixed bug 1212, Fixed error regaring no default action (Chris T)
* Fixed bug 1215, duplicate user throws incorrect error (Chris T)
* Fixed bug 1204, Unable to select blank salutation (Chris T)
* Fixed bug 1198, incorrect rewrite rule on Apache 2.4 (Chris T)
* Fixed bug 1217, Link to business units on Business_Unit report was hardcoded (Pongracz I)